Added: Theme switch for the website

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "hamburger-react": "^2.5.1",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
