--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "hamburger-react": "^2.5.1",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
@@ -18,6 +19,7 @@
     "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
